--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <div class='main'>
     <div class='wenzi'>
       <div class='biaoti'>速来第一个房间
-      <div class='biaoti'>大尺度美女主播表演直播
-      <div class='biaoti'> 进群密码在房间公告上
+      <div class='biaoti'>疯狂火辣直播你懂得
       <div class='jianjiezi'>推荐QQ一建登陆方便快捷
       <div class='jianjiezi'>目前只支持手机用户
     </div>
