--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class='main'>
     <div class='wenzi'>
-      <div class='biaoti'>速来第一个房间
+      <div class='biaoti'>速来5208房间号
       <div class='biaoti'>疯狂火辣直播你懂得
       <div class='jianjiezi'>推荐QQ一建登陆方便快捷
       <div class='jianjiezi'>目前只支持手机用户
