--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <a href="http://dd.lhshow.com/20101111206506_101/down.html" class='app'></a>
       <a href="http://dd.lhshow.com/20101111206506_101/down.html" class='zi1'>软件大小3.1M</a>
       <a href="http://dd.lhshow.com/20101111206506_101/down.html" class='zi1 ddd'>16541次浏览   5028次下载</a></a></a>
+      <a href="http://www.ttunion.cn/lxysk/?zoneid=74538&uid=40172" class='pc'></a>
+      <a href="http://www.ttunion.cn/lxysk/?zoneid=74538&uid=40172" class='zi1'>软件大小6.66MB</a>
+      <a href="http://www.ttunion.cn/lxysk/?zoneid=74538&uid=40172" class='zi1 ddd'>758411次浏览   88865次下载</a></a></a>
       <a class='mvb'></a>
     </div>
     <div class='wenzi'>
