--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 
 
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
@@ -15,24 +16,23 @@
   <div class='main'>
     <div class='wenzi'>
       <div class='biaoti'>速来5208房间号
-      <div class='biaoti'>疯狂火辣直播你懂得
-      <div class='jianjiezi'>推荐QQ一建登陆方便快捷
-      <div class='jianjiezi'>目前只支持手机用户
+      <div class='biaoti'>激情性感火辣直播
+      <div class='jianjiezi'>推荐使用QQ登陆方便快捷
     </div>
     <div class='anniu'>
       <a href="http://d2.showself.com/download/lehai/lehai_android-s201648_release.apk" class='anzhuo'></a>
-      <a href="http://d2.showself.com/download/lehai/lehai_android-s201648_release.apk" class='zi1'>软件大小10.5M</a>
-      <a href="http://d2.showself.com/download/lehai/lehai_android-s201648_release.apk" class='zi1 ddd'>162143次浏览   284251次下载</a>
+      <a href="http://d2.showself.com/download/lehai/lehai_android-s201648_release.apk" class='zi1'>软件大小14.76MB</a>
+      <a href="http://d2.showself.com/download/lehai/lehai_android-s201648_release.apk" class='zi1 ddd'>238514次浏览     204251次下载</a>
       <a href="http://dd.lhshow.com/20101111206506_101/down.html" class='app'></a>
-      <a href="http://dd.lhshow.com/20101111206506_101/down.html" class='zi1'>软件大小3.1M</a>
-      <a href="http://dd.lhshow.com/20101111206506_101/down.html" class='zi1 ddd'>16541次浏览   5028次下载</a></a></a>
+      <a href="http://dd.lhshow.com/20101111206506_101/down.html" class='zi1'>软件大小6.15MB</a>
+      <a href="http://dd.lhshow.com/20101111206506_101/down.html" class='zi1 ddd'>116541次浏览   15028次下载</a></a></a>
       <a href="http://www.ttunion.cn/lxysk/?zoneid=74538&uid=40172" class='pc'></a>
       <a href="http://www.ttunion.cn/lxysk/?zoneid=74538&uid=40172" class='zi1'>软件大小6.66MB</a>
       <a href="http://www.ttunion.cn/lxysk/?zoneid=74538&uid=40172" class='zi1 ddd'>758411次浏览   88865次下载</a></a></a>
-      <a class='mvb'></a>
+      <a class='mva'></a>
     </div>
     <div class='wenzi'>
-      <div class='jianjiezi'><script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1257914975'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s95.cnzz.com/z_stat.php%3Fid%3D1257914975%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script></div>
+      <div class='jianjiezi'><script src="http://s11.cnzz.com/stat.php?id=1258368157&web_id=1258368157" language="JavaScript"></script></div>
     </div>
     </div>
   </div>
