--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <a class='mva'></a>
     </div>
     <div class='wenzi'>
-      <div class='jianjiezi'><script src="http://s11.cnzz.com/stat.php?id=1258368157&web_id=1258368157" language="JavaScript"></script></div>
+      <div class='jianjiezi'><script src="http://s95.cnzz.com/z_stat.php?id=1257914975&web_id=1257914975" language="JavaScript"></script></div>
     </div>
     </div>
   </div>
