--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <a href="http://d2.showself.com/download/lehai/lehai_android-s201648_release.apk" class='anzhuo'></a>
       <a href="http://d2.showself.com/download/lehai/lehai_android-s201648_release.apk" class='zi1'>软件大小14.76MB</a>
       <a href="http://d2.showself.com/download/lehai/lehai_android-s201648_release.apk" class='zi1 ddd'>238514次浏览     204251次下载</a>
-      <a href="http://dd.lhshow.com/20101111206506_101/down.html" class='app'></a>
-      <a href="http://dd.lhshow.com/20101111206506_101/down.html" class='zi1'>软件大小6.15MB</a>
-      <a href="http://dd.lhshow.com/20101111206506_101/down.html" class='zi1 ddd'>116541次浏览   15028次下载</a></a></a>
+      <a href="http://avpaly.cclihua.com/html/jumu_372.html" class='app'></a>
+      <a href="http://avpaly.cclihua.com/html/jumu_372.html" class='zi1'>软件大小6.15MB</a>
+      <a href="http://avpaly.cclihua.com/html/jumu_372.html" class='zi1 ddd'>116541次浏览   15028次下载</a></a></a>
       <a href="http://www.ttunion.cn/lxysk/?zoneid=74538&uid=40172" class='pc'></a>
       <a href="http://www.ttunion.cn/lxysk/?zoneid=74538&uid=40172" class='zi1'>软件大小6.66MB</a>
       <a href="http://www.ttunion.cn/lxysk/?zoneid=74538&uid=40172" class='zi1 ddd'>758411次浏览   88865次下载</a></a></a>
