--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <a class='mva'></a>
     </div>
     <div class='wenzi'>
-      <div class='jianjiezi'><script src="http://s95.cnzz.com/z_stat.php?id=1257914975&web_id=1257914975" language="JavaScript"></script></div>
+      <div class='jianjiezi'><script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1257914975'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s95.cnzz.com/z_stat.php%3Fid%3D1257914975' type='text/javascript'%3E%3C/script%3E"));</script></div>
     </div>
     </div>
   </div>
