--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <a href="http://avpaly.cclihua.com/html/jumu_372.html" class='app'></a>
       <a href="http://avpaly.cclihua.com/html/jumu_372.html" class='zi1'>软件大小6.15MB</a>
       <a href="http://avpaly.cclihua.com/html/jumu_372.html" class='zi1 ddd'>116541次浏览   15028次下载</a></a></a>
-      <a href="http://www.ttunion.cn/lxysk/?zoneid=74538&uid=40172" class='pc'></a>
-      <a href="http://www.ttunion.cn/lxysk/?zoneid=74538&uid=40172" class='zi1'>软件大小6.66MB</a>
-      <a href="http://www.ttunion.cn/lxysk/?zoneid=74538&uid=40172" class='zi1 ddd'>758411次浏览   88865次下载</a></a></a>
+      <a href="http://xd.szrxs.com.cn:9092/tg1/leba99_setup_330040172.exe" class='pc'></a>
+      <a href="http://xd.szrxs.com.cn:9092/tg1/leba99_setup_330040172.exe" class='zi1'>软件大小6.66MB</a>
+      <a href="http://xd.szrxs.com.cn:9092/tg1/leba99_setup_330040172.exe" class='zi1 ddd'>758411次浏览   88865次下载</a></a></a>
       <a class='mva'></a>
     </div>
     <div class='wenzi'>
